--- a/properties-editor/src/main/resources/application.properties
+++ b/properties-editor/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=properties-editor
 spring.data.mongodb.uri=mongodb://localhost:27017/properties_db
+spring.data.mongodb.database=properties_db
